--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.0.1",
   "packageManager": "pnpm@7.1.0",
   "scripts": {
-    "play:vue": "pnpm -F @smart-storage/vue-demo start"
+    "postinstall": "rimraf ./.husky && husky install && husky add .husky/pre-commit \"npm run lint-staged\"",
+    "play:vue": "pnpm -F @smart-storage/vue-demo start",
+    "eslint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts",
+    "format": "pnpm -F \"@smart-storage/*\" format",
+    "lint-staged": "pnpm format && lint-staged"
   },
   "private": true,
   "license": "MIT",
   "devDependencies": {
+    "eslint": "8.22.0",
+    "eslint-config-airbnb-typescript-prettier": "5.0.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.0",
+    "prettier": "2.7.1",
+    "rimraf": "4.0.7",
     "typescript": "4.9.4"
   }
 }
