--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "packageManager": "pnpm@7.1.0",
   "scripts": {
-    "postinstall": "rimraf ./.husky && husky install && husky add .husky/pre-commit \"npm run lint-staged\"",
+    "postinstall": "rimraf ./.husky && husky install && husky add .husky/pre-commit \"pnpm lint-staged\"",
     "play:vue": "pnpm -F @smart-storage/vue-demo start",
+    "test": "pnpm -F \"@smart-storage/*\" test",
     "eslint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts",
     "format": "pnpm -F \"@smart-storage/*\" format",
     "lint-staged": "pnpm format && lint-staged"
@@ -12,12 +13,16 @@
   "private": true,
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "29.2.5",
     "eslint": "8.22.0",
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
     "husky": "8.0.3",
+    "jest": "29.3.1",
+    "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
     "prettier": "2.7.1",
     "rimraf": "4.0.7",
+    "ts-jest": "29.0.5",
     "typescript": "4.9.4"
   }
 }
