chore: Abstract out the public scripts

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@smart-storage/core",
   "version": "0.0.1",
+  "config": {
+    "name": "core"
+  },
   "scripts": {
     "test": "jest",
-    "test:cov": "jest --coverage && node ./scripts/coverage.cjs",
+    "test:cov": "jest --coverage && node ../../scripts/coverage.cjs",
     "format": "prettier -w \"src/**/*.(js|ts)\""
   },
   "private": true,
