--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
+    "open": "8.4.0",
     "prettier": "2.7.1",
     "rimraf": "4.0.7",
     "ts-jest": "29.0.5",
