docs(home): update logo image

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
   ],
   "markdownlint.config": {
     "MD024": false,
-    "MD025": false
+    "MD025": false,
+    "MD033": false,
+    "MD041": false
   }
 }
