chore: add commit message linter

--- a/package.json
+++ b/package.json
@@ -3,23 +3,28 @@
   "version": "0.0.1",
   "packageManager": "pnpm@7.1.0",
   "scripts": {
-    "postinstall": "rimraf ./.husky && husky install && husky add .husky/pre-commit \"pnpm lint-staged\"",
+    "postinstall": "rimraf ./.husky && husky install && pnpm husky:pre-commit-hook && pnpm husky:commit-msg-hook",
+    "husky:pre-commit-hook": "husky add .husky/pre-commit 'pnpm lint-staged'",
+    "husky:commit-msg-hook": "husky add .husky/commit-msg  'pnpm commitlint'",
     "play:vue-demo": "pnpm -F smart-storage-vue-demo start",
     "play:react-demo": "pnpm -F smart-storage-react-demo start",
     "docs:start": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "build:pages": "pnpm build && pnpm docs:build && node ./scripts/build-pages.js",
     "test": "pnpm -F \"@smart-storage/*\" test",
     "build": "pnpm -F \"@smart-storage/*\" build",
+    "build:pages": "pnpm build && pnpm docs:build && node ./scripts/build-pages.js",
     "format": "pnpm -F \"@smart-storage/*\" format",
     "eslint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts",
     "lint-staged": "lint-staged",
+    "commitlint": "commitlint --edit ${1}",
     "clean-all": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
     "force-update": "pnpx rimraf ./pnpm-lock.yaml && pnpm install && pnpm build && pnpm clean-all && pnpx rimraf ./pnpm-lock.yaml && pnpm install"
   },
   "private": true,
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "17.4.2",
+    "@commitlint/config-conventional": "17.4.2",
     "@rollup/plugin-commonjs": "24.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
