--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "postinstall": "rimraf ./.husky && husky install && pnpm husky:pre-commit-hook && pnpm husky:commit-msg-hook",
     "husky:pre-commit-hook": "husky add .husky/pre-commit 'pnpm lint-staged'",
-    "husky:commit-msg-hook": "husky add .husky/commit-msg  'pnpm commitlint'",
+    "husky:commit-msg-hook": "husky add .husky/commit-msg 'pnpm commitlint'",
     "play:vue-demo": "pnpm -F smart-storage-vue-demo start",
     "play:react-demo": "pnpm -F smart-storage-react-demo start",
     "docs:start": "vuepress dev docs",
@@ -38,7 +38,7 @@
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
-    "open": "8.4.0",
+    "live-server": "1.2.2",
     "prettier": "2.7.1",
     "rimraf": "4.0.7",
     "rollup": "3.10.0",
