--- a/.github/workflows/deploy-pages.yaml
+++ b/.github/workflows/deploy-pages.yaml
@@ -6,12 +6,15 @@ on:
     branches:
       - main
     paths:
+      - scripts/build-pages.js
       - config/rollup.config.js
       - config/tsconfig.base.json
       - docs/**/*
       - packages/**/*
       - playground/**/*
-      - scripts/build-pages.js
+    paths-ignore:
+      - packages/*/__tests__
+      - packages/*/jest.config.cjs
 
 env:
   APP_NAME: Lark
@@ -23,34 +26,20 @@ jobs:
     name: Report Start
     steps:
       - name: Notify start
-        uses: northwang-personal/chatbot-webhook-client@v1.0.1
+        uses: northwang-personal/chatbot-webhook-client@v1.1.0
         with:
           app: ${{ env.APP_NAME }}
           webhook: ${{ secrets.CUSTOM_BOT_WEBHOOK }}
           secret: ${{ secrets.CUSTOM_BOT_SECRET }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          template: file://.template/lark-message-card.json
           params: >-
             {
-              "msg_type": "interactive",
-              "card": {
-                "header": {
-                  "template": "blue",
-                  "title": { "tag": "plain_text", "content": "Workflow Start" }
-                },
-                "elements": [{
-                  "tag": "markdown",
-                  "content": "**[Repository]:** ${{ github.repository }}\n**[Workflow]:** ${{ github.workflow }}"
-                }, { 
-                  "tag": "hr" 
-                }, {
-                  "tag": "action",
-                  "actions": [{
-                    "tag": "button",
-                    "text": { "tag": "plain_text", "content": "Show More" },
-                    "type": "primary",
-                    "url": "${{ env.WORKFLOW_URL }}"
-                  }]
-                }]
-              } 
+              "header_color": "blue",
+              "header_title": "Workflow Start",
+              "repository": "${{ github.repository }}",
+              "workflow": "${{ github.workflow }}",
+              "workflow_url": "${{ env.WORKFLOW_URL }}"
             }
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -62,14 +51,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           ref: main
-      - name: Enable Cache
-        if: success()
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
       - name: Set up Node 16
         if: success()
         uses: actions/setup-node@v3
@@ -77,7 +58,24 @@ jobs:
           node-version: 16
       - name: Set up PNPM
         if: success()
-        run: npm i pnpm --location=global
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+          run_install: false
+      - name: Get PNPM store directory
+        id: pnpm-cache
+        if: success()
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - name: Setup pnpm cache
+        if: success()
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
       - name: Install dependencies
         if: success()
         run: pnpm install
@@ -99,34 +97,20 @@ jobs:
     needs: build-and-deploy
     steps:
       - name: Notify success
-        uses: northwang-personal/chatbot-webhook-client@v1.0.1
+        uses: northwang-personal/chatbot-webhook-client@v1.1.0
         with:
           app: ${{ env.APP_NAME }}
           webhook: ${{ secrets.CUSTOM_BOT_WEBHOOK }}
           secret: ${{ secrets.CUSTOM_BOT_SECRET }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          template: file://.template/lark-message-card.json
           params: >-
             {
-              "msg_type": "interactive",
-              "card": {
-                "header": {
-                  "template": "green",
-                  "title": { "tag": "plain_text", "content": "Workflow Succeed" }
-                },
-                "elements": [{
-                  "tag": "markdown",
-                  "content": "**[Repository]:** ${{ github.repository }}\n**[Workflow]:** ${{ github.workflow }}"
-                }, { 
-                  "tag": "hr" 
-                }, {
-                  "tag": "action",
-                  "actions": [{
-                    "tag": "button",
-                    "text": { "tag": "plain_text", "content": "Show More" },
-                    "type": "primary",
-                    "url": "${{ env.WORKFLOW_URL }}"
-                  }]
-                }]
-              } 
+              "header_color": "green",
+              "header_title": "Workflow Succeed",
+              "repository": "${{ github.repository }}",
+              "workflow": "${{ github.workflow }}",
+              "workflow_url": "${{ env.WORKFLOW_URL }}"
             }
   notify-failure:
     if: failure()
@@ -135,32 +119,18 @@ jobs:
     needs: build-and-deploy
     steps:
       - name: Notify failure
-        uses: northwang-personal/chatbot-webhook-client@v1.0.1
+        uses: northwang-personal/chatbot-webhook-client@v1.1.0
         with:
           app: ${{ env.APP_NAME }}
           webhook: ${{ secrets.CUSTOM_BOT_WEBHOOK }}
           secret: ${{ secrets.CUSTOM_BOT_SECRET }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          template: file://.template/lark-message-card.json
           params: >-
             {
-              "msg_type": "interactive",
-              "card": {
-                "header": {
-                  "template": "red",
-                  "title": { "tag": "plain_text", "content": "Workflow Failed" }
-                },
-                "elements": [{
-                  "tag": "markdown",
-                  "content": "**[Repository]:** ${{ github.repository }}\n**[Workflow]:** ${{ github.workflow }}"
-                }, { 
-                  "tag": "hr" 
-                }, {
-                  "tag": "action",
-                  "actions": [{
-                    "tag": "button",
-                    "text": { "tag": "plain_text", "content": "Show More" },
-                    "type": "primary",
-                    "url": "${{ env.WORKFLOW_URL }}"
-                  }]
-                }]
-              } 
+              "header_color": "red",
+              "header_title": "Workflow Failed",
+              "repository": "${{ github.repository }}",
+              "workflow": "${{ github.workflow }}",
+              "workflow_url": "${{ env.WORKFLOW_URL }}"
             }
