ci(coverage-upload): add coverage-upload workflow

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "docs:start": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "test": "pnpm -F \"@smart-storage/*\" test",
+    "test:cov": "pnpm -F \"@smart-storage/*\" test:cov && node ./scripts/cov-move.js",
     "build": "pnpm -F \"@smart-storage/*\" build",
+    "build-only": "pnpm -F \"@smart-storage/*\" build-only",
     "build:pages": "pnpm build && pnpm docs:build && node ./scripts/build-pages.js",
     "format": "pnpm -F \"@smart-storage/*\" format",
     "eslint": "eslint --ext .js,.cjs,.mjs,.ts,.cts,.mts",
