--- a/.github/workflows/coverage-upload.yaml
+++ b/.github/workflows/coverage-upload.yaml
@@ -83,13 +83,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./coverage
-          files: >-
-            ./core-clover.xml,
-            ./hooks-clover.xml,
-            ./react-hooks-clover.xml,
-            ./shared-clover.xml,
-            ./vue-hooks-clover.xml
+          directory: ./packages
           fail_ci_if_error: true
   notify-success:
     if: success()
