--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
     "MD024": false,
     "MD025": false,
     "MD033": false,
-    "MD041": false
+    "MD041": false,
+    "MD051": false
   }
 }
