--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
     "live-server": "1.2.2",
+    "markdown-it": "8.4.2",
     "prettier": "2.7.1",
     "rimraf": "4.0.7",
     "rollup": "3.10.0",
@@ -48,6 +49,7 @@
     "ts-jest": "29.0.5",
     "typescript": "4.9.4",
     "vue": "2.7.14",
-    "vuepress": "1.9.2"
+    "vuepress": "1.9.2",
+    "vuepress-theme-vt": "0.8.1"
   }
 }
