chore(package): update lint-staged scripts

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-  "packages/**/*.(ts|tsx)": ["pnpm format", "pnpm eslint"]
+  "packages/**/*.(ts|tsx)": ["pnpm lint-staged:format", "pnpm lint-staged:eslint"]
 }
