refactor(core): add missing types

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "test": "jest",
     "test:cov": "jest --coverage",
-    "test:cov-serve": "pnpm test && node ../../scripts/cov-serve.js",
+    "test:cov-serve": "pnpm test:cov && node ../../scripts/cov-serve.js",
     "build-only": "rimraf \"./dist\" --impl=native && rollup -c",
     "build": "pnpm test && pnpm build-only",
     "format": "prettier -w \"src/**/*.(js|ts)\"",
@@ -42,5 +42,8 @@
   "files": [
     "./dist"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@smart-storage/shared": "workspace:*"
+  }
 }
