--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -25,7 +25,7 @@
   "scripts": {
     "test": "jest",
     "test:cov": "jest --coverage",
-    "test:cov-serve": "pnpm test && node ../../scripts/cov-serve.js",
+    "test:cov-serve": "pnpm test:cov && node ../../scripts/cov-serve.js",
     "build-only": "rimraf \"./dist\" --impl=native && rollup -c",
     "build": "pnpm test && pnpm build-only",
     "format": "prettier -w \"src/**/*.(js|ts)\"",
@@ -48,6 +48,7 @@
     "@smart-storage/core": "latest"
   },
   "dependencies": {
-    "@smart-storage/core": "workspace:*"
+    "@smart-storage/core": "workspace:*",
+    "@smart-storage/shared": "workspace:*"
   }
 }
