chore(package): change demo scripts

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "postinstall": "rimraf ./.husky && husky install && pnpm husky:pre-commit-hook && pnpm husky:commit-msg-hook",
     "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
     "husky:commit-msg-hook": "husky add .husky/commit-msg \"pnpm commitlint\"",
-    "play:vue-demo": "pnpm -F smart-storage-vue-demo start",
-    "play:react-demo": "pnpm -F smart-storage-react-demo start",
+    "demo:vue": "pnpm -F smart-storage-vue-demo start",
+    "demo:react": "pnpm -F smart-storage-react-demo start",
     "docs:start": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "test": "pnpm -F \"@smart-storage/*\" test",
