--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "lint-staged": "lint-staged",
     "lint-staged:format": "prettier -w",
     "lint-staged:eslint": "eslint",
+    "commit": "cz",
     "commitlint": "commitlint --edit",
     "clean": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
     "update:deps": "pnpx rimraf ./pnpm-lock.yaml && pnpm install",
-    "update:project": "pnpm update:deps && pnpm clean && pnpm update:deps && pnpm build",
-    "update-china:deps": "pnpx rimraf ./pnpm-lock.yaml && pnpm install --registry=https://registry.npmmirror.com/",
-    "update-china:project": "pnpm update-china:deps && pnpm clean && pnpm update-china:deps && pnpm build"
+    "update:project": "pnpm update:deps && pnpm clean && pnpm update:deps && pnpm build"
   },
   "private": true,
   "license": "MIT",
@@ -37,6 +36,8 @@
     "@rollup/plugin-terser": "0.3.0",
     "@rollup/plugin-typescript": "11.0.0",
     "@types/jest": "29.2.5",
+    "commitizen": "4.3.0",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
     "fs-extra": "11.1.0",
