chore(package.json): rename commitlint to commint:lint

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "packageManager": "pnpm@7.1.0",
   "scripts": {
     "postinstall": "rimraf ./.husky && husky install && pnpm husky:pre-commit-hook && pnpm husky:commit-msg-hook",
+    "clean": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
+    "eslint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts",
+    "format": "pnpm -F \"@smart-storage/*\" format",
     "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
-    "husky:commit-msg-hook": "husky add .husky/commit-msg \"pnpm commitlint\"",
+    "husky:commit-msg-hook": "husky add .husky/commit-msg \"pnpm commit:lint\"",
     "demo:vue": "pnpm -F smart-storage-vue-demo start",
     "demo:react": "pnpm -F smart-storage-react-demo start",
     "docs:start": "vuepress dev docs",
@@ -15,14 +18,11 @@
     "build": "pnpm -F \"@smart-storage/*\" build",
     "build-only": "pnpm -F \"@smart-storage/*\" build-only",
     "build:pages": "pnpm build && pnpm docs:build && node ./scripts/build-pages.js",
-    "format": "pnpm -F \"@smart-storage/*\" format",
-    "eslint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts",
+    "commit": "cz",
+    "commit:lint": "commitlint --edit",
     "lint-staged": "lint-staged",
     "lint-staged:format": "prettier -w",
     "lint-staged:eslint": "eslint",
-    "commit": "cz",
-    "commitlint": "commitlint --edit",
-    "clean": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
     "update:deps": "pnpx rimraf ./pnpm-lock.yaml && pnpm install",
     "update:project": "pnpm update:deps && pnpm clean && pnpm update:deps && pnpm build"
   },
