chore(package.json): modify scripts

--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "clean": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
     "eslint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts",
     "format": "pnpm -F \"@smart-storage/*\" format",
-    "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
-    "husky:commit-msg-hook": "husky add .husky/commit-msg \"pnpm commit:lint\"",
     "demo:vue": "pnpm -F smart-storage-vue-demo start",
     "demo:react": "pnpm -F smart-storage-react-demo start",
     "docs:start": "vuepress dev docs",
@@ -20,11 +18,15 @@
     "build:pages": "pnpm build && pnpm docs:build && node ./scripts/build-pages.js",
     "commit": "cz",
     "commit:lint": "commitlint --edit",
+    "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
+    "husky:commit-msg-hook": "husky add .husky/commit-msg \"pnpm commit:lint\"",
     "lint-staged": "lint-staged",
     "lint-staged:format": "prettier -w",
     "lint-staged:eslint": "eslint",
-    "update:deps": "pnpx rimraf ./pnpm-lock.yaml && pnpm install",
-    "update:project": "pnpm update:deps && pnpm clean && pnpm update:deps && pnpm build"
+    "update:deps": "pnpm install && pnpm clean && pnpm install",
+    "update:repos": "pnpm update:deps && pnpm build",
+    "force-update:deps": "pnpm install && pnpm clean && pnpx rimraf ./pnpm-lock.yaml && pnpm install",
+    "force-update:repos": "pnpm force-update:deps && pnpm build"
   },
   "private": true,
   "license": "MIT",
