docs: update usage of smart storage

--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "clean": "pnpx rimraf \"./node_modules\" --impl=native && pnpm -F \"*\" clean",
     "eslint": "eslint . --ext .js,.cjs,.mjs,.ts,.cts,.mts",
     "format": "pnpm -F \"@smart-storage/*\" format",
-    "demo:vue": "pnpm -F smart-storage-vue-demo start",
-    "demo:react": "pnpm -F smart-storage-react-demo start",
-    "docs:start": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
+    "start:vue-demo": "pnpm -F smart-storage-vue-demo start",
+    "start:react-demo": "pnpm -F smart-storage-react-demo start",
+    "start:docs": "vuepress dev docs",
     "test": "pnpm -F \"@smart-storage/*\" test",
     "test:cov": "pnpm -F \"@smart-storage/*\" test:cov",
     "build": "pnpm -F \"@smart-storage/*\" build",
+    "build:docs": "vuepress build docs",
+    "build:pages": "pnpm build && pnpm build:docs && node ./scripts/build-pages.js",
     "build-only": "pnpm -F \"@smart-storage/*\" build-only",
-    "build:pages": "pnpm build && pnpm docs:build && node ./scripts/build-pages.js",
     "commit": "cz",
     "commit:lint": "commitlint --edit",
     "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
