--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:docs": "vuepress build docs",
     "build:pages": "pnpm build && pnpm build:docs && node ./scripts/build-pages.js",
     "build-only": "pnpm -F \"@smart-storage/*\" build-only",
+    "release": "node ./scripts/release.js",
     "commit": "cz",
     "commit:lint": "commitlint --edit",
     "husky:pre-commit-hook": "husky add .husky/pre-commit \"pnpm lint-staged\"",
@@ -37,6 +38,7 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
     "@rollup/plugin-typescript": "11.0.0",
+    "@types/inquirer": "8.2.5",
     "@types/jest": "29.2.5",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
@@ -44,6 +46,7 @@
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
     "fs-extra": "11.1.0",
     "husky": "8.0.3",
+    "inquirer": "8.2.5",
     "jest": "29.3.1",
     "jest-environment-jsdom": "29.3.1",
     "lint-staged": "13.1.0",
@@ -53,6 +56,7 @@
     "rimraf": "4.0.7",
     "rollup": "3.10.0",
     "shelljs": "0.8.5",
+    "standard-version": "9.5.0",
     "ts-jest": "29.0.5",
     "typescript": "4.9.4",
     "vue": "2.7.14",
