chore(release): rewrite logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,12 +3,15 @@
     "codecov",
     "commitlint",
     "imgs",
+    "infile",
     "keyof",
     "lcov",
     "peaceiris",
     "plusplus",
     "PNPM",
     "pnpx",
+    "postbump",
+    "postchangelog",
     "reco",
     "rollup",
     "testid",
