chore: add standard-version for sub repositories

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,5 +45,8 @@
   "license": "MIT",
   "dependencies": {
     "@smart-storage/shared": "workspace:*"
+  },
+  "devDependencies": {
+    "standard-version": "9.5.0"
   }
 }
