--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -47,5 +47,8 @@
   "dependencies": {
     "@smart-storage/core": "workspace:*",
     "@smart-storage/shared": "workspace:*"
+  },
+  "devDependencies": {
+    "standard-version": "9.5.0"
   }
 }
