--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -40,5 +40,8 @@
   "files": [
     "./dist"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "standard-version": "9.5.0"
+  }
 }
