--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -58,6 +58,7 @@
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "standard-version": "9.5.0"
   }
 }
