--- a/.github/workflows/deploy-pages.yaml
+++ b/.github/workflows/deploy-pages.yaml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Report Start
     steps:
-      - name: Notify start
+      - name: Notify Start
         uses: northwang-lucky/chatbot-webhook-client@v1.1.1
         with:
           app: ${{ env.APP_NAME }}
@@ -43,11 +43,11 @@ jobs:
             }
   build-and-deploy:
     runs-on: ubuntu-latest
-    name: Build pages
+    name: Build Pages
     permissions:
       contents: write
     steps:
-      - name: Checkout main branch
+      - name: Checkout Main Branch
         uses: actions/checkout@v3
         with:
           ref: main
@@ -62,13 +62,13 @@ jobs:
         with:
           version: 7
           run_install: false
-      - name: Get PNPM store directory
+      - name: Get PNPM Store Directory
         id: pnpm-cache
         if: success()
         shell: bash
         run: |
           echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
-      - name: Setup pnpm cache
+      - name: Setup PNPM Cache
         if: success()
         uses: actions/cache@v3
         with:
@@ -76,10 +76,10 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - name: Install dependencies
+      - name: Install Dependencies
         if: success()
         run: pnpm install
-      - name: Run build
+      - name: Run Build
         if: success()
         run: pnpm build:pages
       - name: Run Deploy
@@ -96,7 +96,7 @@ jobs:
     name: Report Success
     needs: build-and-deploy
     steps:
-      - name: Notify success
+      - name: Notify Success
         uses: northwang-lucky/chatbot-webhook-client@v1.1.1
         with:
           app: ${{ env.APP_NAME }}
@@ -118,7 +118,7 @@ jobs:
     name: Report Failure
     needs: build-and-deploy
     steps:
-      - name: Notify failure
+      - name: Notify Failure
         uses: northwang-lucky/chatbot-webhook-client@v1.1.1
         with:
           app: ${{ env.APP_NAME }}
