ci: fix errors in workflows

--- a/.github/workflows/coverage-upload.yaml
+++ b/.github/workflows/coverage-upload.yaml
@@ -7,8 +7,7 @@ on:
       - main
     paths:
       - .github/workflows/coverage-upload.yaml
-      - scripts/cov-move.js
-      - config/rollup.config.js
+      - config/rollup.config.cjs
       - config/tsconfig.base.json
       - packages/**/*
 
