--- a/package.json
+++ b/package.json
@@ -38,13 +38,16 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
     "@rollup/plugin-typescript": "11.0.0",
+    "@types/express": "4.17.17",
     "@types/inquirer": "8.2.5",
     "@types/jest": "29.2.5",
     "commitizen": "4.3.0",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
+    "express": "4.18.2",
     "fs-extra": "11.1.0",
+    "http-proxy-middleware": "2.0.6",
     "husky": "8.0.3",
     "inquirer": "8.2.5",
     "jest": "29.3.1",
