build(vercel): add new rewrites rules

--- a/vercel/vercel.json
+++ b/vercel/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/smart-storage/(.*)",
       "destination": "/api/proxy"
+    },
+    {
+      "source": "/api/(.*)",
+      "destination": "/api"
     }
   ]
 }
