--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
     "@rollup/plugin-typescript": "11.0.0",
+    "@types/fs-extra": "11.0.1",
     "@types/inquirer": "8.2.5",
     "@types/jest": "29.2.5",
     "commitizen": "4.3.0",
