--- a/vercel/vercel.json
+++ b/vercel/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/smart-storage/(.*)",
-      "destination": "/api/proxy"
+      "source": "/smart-storage-pages/:match*",
+      "destination": "/:match*"
     },
     {
       "source": "/api/(.*)",
