--- a/.github/workflows/deploy-pages.yaml
+++ b/.github/workflows/deploy-pages.yaml
@@ -43,9 +43,9 @@ jobs:
               "workflow": "${{ github.workflow }}",
               "workflow_url": "${{ env.WORKFLOW_URL }}"
             }
-  build-and-deploy:
+  vercel-build-and-deploy:
     runs-on: ubuntu-latest
-    name: Build Pages
+    name: Vercel Build Pages
     permissions:
       contents: write
     steps:
@@ -83,7 +83,7 @@ jobs:
         run: pnpm install
       - name: Run Build
         if: success()
-        run: pnpm build:pages
+        run: pnpm build:pages-vercel
       - name: Run Deploy
         if: success()
         uses: peaceiris/actions-gh-pages@v3
@@ -91,13 +91,63 @@ jobs:
           personal_token: ${{ secrets.SMART_STORAGE_PAGES_TOKEN }}
           external_repository: northwang-lucky/smart-storage-pages
           publish_dir: ./dist
-          publish_branch: main
+          publish_branch: vercel
+          full_commit_message: ${{ github.event.head_commit.message }}
+  github-build-and-deploy:
+    runs-on: ubuntu-latest
+    name: GitHub Build Pages
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout Main Branch
+        uses: actions/checkout@v3
+        with:
+          ref: main
+      - name: Set up Node 16
+        if: success()
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Set up PNPM
+        if: success()
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+          run_install: false
+      - name: Get PNPM Store Directory
+        id: pnpm-cache
+        if: success()
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - name: Setup PNPM Cache
+        if: success()
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      - name: Install Dependencies
+        if: success()
+        run: pnpm install
+      - name: Run Build
+        if: success()
+        run: pnpm build:pages-github
+      - name: Run Deploy
+        if: success()
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.SMART_STORAGE_PAGES_TOKEN }}
+          external_repository: northwang-lucky/smart-storage-pages
+          publish_dir: ./dist
+          publish_branch: gh-pages
           full_commit_message: ${{ github.event.head_commit.message }}
   notify-success:
     if: success()
     runs-on: ubuntu-latest
     name: Report Success
-    needs: build-and-deploy
+    needs: [vercel-build-and-deploy, github-build-and-deploy]
     steps:
       - name: Notify Success
         uses: northwang-lucky/chatbot-webhook-client@v1.1.1
@@ -119,7 +169,7 @@ jobs:
     if: failure()
     runs-on: ubuntu-latest
     name: Report Failure
-    needs: build-and-deploy
+    needs: [vercel-build-and-deploy, github-build-and-deploy]
     steps:
       - name: Notify Failure
         uses: northwang-lucky/chatbot-webhook-client@v1.1.1
