--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "build": "pnpm -F \"@smart-storage/*\" build",
     "build:docs": "vuepress build docs",
     "build:pages": "pnpm build && pnpm build:docs && node ./scripts/build-pages.js",
+    "build:pages-github": "cross-env MODE=github pnpm build:pages",
+    "build:pages-vercel": "cross-env MODE=vercel pnpm build:pages",
     "build-only": "pnpm -F \"@smart-storage/*\" build-only",
     "release": "node ./scripts/release.js",
     "commit": "cz",
@@ -38,10 +40,12 @@
     "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-terser": "0.3.0",
     "@rollup/plugin-typescript": "11.0.0",
+    "@smart-storage-lib/config": "workspace:*",
     "@types/fs-extra": "11.0.1",
     "@types/inquirer": "8.2.5",
     "@types/jest": "29.2.5",
     "commitizen": "4.3.0",
+    "cross-env": "7.0.3",
     "cz-conventional-changelog": "3.3.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb-typescript-prettier": "5.0.0",
