ci(release-publish.yaml): modify the way of publish

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
+//registry.npmjs.org/:always-auth=true
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
 shamefully-hoist=true
 scripts-prepend-node-path=true
