--- a/.github/workflows/release-publish.yaml
+++ b/.github/workflows/release-publish.yaml
@@ -80,9 +80,9 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Publish
         if: success()
-        uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: pnpm publish:packages
   notify-success:
     if: success()
     runs-on: ubuntu-latest
